Added style to sidebar

--- a/style.css
+++ b/style.css
@@ -4,14 +4,43 @@
     padding: 0;
 }
 
+body{
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: 25% 75%;
+}
 header{
     background-color: aqua;
     border: 5px solid black;
+    grid-area: 1 / 2 / 3 / 4;
+}
+aside {
+    background-color: #3399FF;
+    color: white;
+    font-weight: bold;
+    font-size: 1.3rem;
+    border: 5px solid black;
+    grid-area: 1 / 1 / 3 / 2;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows:  1fr 1fr;
+    grid-template-columns: 20px 200px 20px;
+    grid-template-rows: 130px 330px 130px;
+    
 }
 
+
+#your_projects {
+    background-color: bisque;
+    border: 5px solid black;
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+#announcements_and_treding{
+    background-color: brown;
+    border: 5px solid black;
+    grid-area: 2 / 3 / 3 / 4;
+}
 input{
     height: 30px;
     width: 520px;
@@ -19,13 +48,30 @@ input{
 }
 
 img {
+    height: 25px;
+    width: 25px;
+}
+.upper_icons {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.lower_icons {
+    grid-area: 3 / 2 / 4 /3;
+}
+.icon {
+    padding: 10px;
+}
+.icon img {
+    vertical-align: middle;
+    margin-right: 20px;
+}
+.dashboard_icon{
+    margin-top: 20px;
+    grid-area: 1 / 2 / 2 / 3; 
+    font-size: 1.8rem;   
+}
+.dashboard_icon img{
     height: 50px;
     width: 50px;
-}
-.upper_row{
-    background-color: antiquewhite;
-    border: 5px solid black;
-    display: flex;
-    justify-content: space-between;
-
+    vertical-align: middle;
 }
