--- a/style.css
+++ b/style.css
@@ -14,7 +14,12 @@ body{
 header{
     background-color: aqua;
     border: 5px solid black;
+    height: 240px; 
     grid-area: 1 / 2 / 3 / 4;
+    display: grid;
+    grid-template-columns:  100px 2fr 1fr ;
+    grid-template-rows: 2fr 1fr 1fr; 
+    align-items: center;
 }
 aside {
     background-color: #3399FF;
@@ -74,4 +79,44 @@ img {
     height: 50px;
     width: 50px;
     vertical-align: middle;
+}
+
+.upper_row_input {
+    grid-area: 1 / 1 / 2 / 3;
+}
+
+.upper_row_input img {
+    vertical-align: middle;
+}
+
+.cat_icon{
+    height: 50px;
+    width: 50px;
+}
+
+.upper_row_picture {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.upper_row_picture img {
+    vertical-align: middle;
+}
+
+.cat_icon_lower {
+    height: 75px;
+    width: 75px;
+    grid-area: 2 / 1 / 4 / 2;
+}
+
+.first_span{
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.second_span {
+    grid-area: 3 / 2 / 4 / 3;
+}
+
+.lower_row_buttons{
+    grid-area: 2 / 3 / 4 / 4;
+    align-items: center;
 }
