--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     grid-template-rows: 25% 75%;
 }
 header{
-    background-color: aqua;
+    background-color: white;
     border: 5px solid black;
     height: 240px; 
     grid-area: 1 / 2 / 3 / 4;
@@ -48,8 +48,10 @@ aside {
 }
 input{
     height: 30px;
-    width: 520px;
+    width: 620px;
+    border: 1px solid gainsboro;
     border-radius: 15px;
+    background-color: gainsboro;
 }
 
 img {
@@ -83,6 +85,7 @@ img {
 
 .upper_row_input {
     grid-area: 1 / 1 / 2 / 3;
+    margin-left: 45px;
 }
 
 .upper_row_input img {
@@ -96,6 +99,15 @@ img {
 
 .upper_row_picture {
     grid-area: 1 / 3 / 2 / 4;
+    
+}
+
+.upper_row_picture img {
+    margin-left: 15px;
+}
+.upper_row_picture span {
+    margin-left: 15px;
+    font-weight: bold;
 }
 
 .upper_row_picture img {
@@ -106,17 +118,34 @@ img {
     height: 75px;
     width: 75px;
     grid-area: 2 / 1 / 4 / 2;
+    margin-left: 45px;
 }
 
 .first_span{
     grid-area: 2 / 2 / 3 / 3;
+    font-weight: bold;
+    margin: 30px 0px 0px 35px;
 }
 
 .second_span {
     grid-area: 3 / 2 / 4 / 3;
+    font-weight: bold;
+    font-size: 1.4rem;
+    margin: 0px 0px 20px 35px;
 }
 
 .lower_row_buttons{
-    grid-area: 2 / 3 / 4 / 4;
+    grid-area: 2 / 2 / 4 / 4;
     align-items: center;
+    margin-left: 880px;
+}
+
+.lower_row_buttons button {
+    background-color: #3399FF;
+    color: white;
+    padding: 10px 20px 10px 20px;
+    border: 1px solid #3399FF;
+    border-radius: 15px;
+    margin-left: 30px;
+    font-weight: bold;
 }
