--- a/style.css
+++ b/style.css
@@ -36,11 +36,75 @@ aside {
 
 
 #your_projects {
-    background-color: bisque;
+    background-color: gainsboro;
     border: 5px solid black;
     grid-area: 2 / 2 / 3 / 3;
+    display: grid;
+    grid-template-columns: 500px 1fr;
+    grid-template-rows: 50px 1fr 1fr 1fr;
+}
+#your_projects span{
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin: 15px 0px 0px 80px;
+}
+#first_article{
+    grid-area: 2 / 1 / 3 / 2;
+}
+#second_article{
+    grid-area: 2 / 2 / 3 / 3;
+}
+#third_article{
+    grid-area: 3 / 1 / 4 / 2;
+}
+#fourth_article{
+    grid-area: 3 / 2 / 4 /3;
+}
+#fifth_article{
+    grid-area: 4 / 1 / 5 / 2;
+}
+#sixth_article{
+    grid-area: 4 / 2 /5 /3;
+}
+#your_projects span{
+    grid-area: 1 / 1 / 2 / 3;
 }
 
+.icons{
+    position: relative;
+    left: 245px;
+    bottom: 25px;
+}
+
+.icons img {
+    margin-left: 10px;
+}
+
+.post{
+    background-color: white;
+    height: 200px;
+    width: 400px;
+    border-radius: 15px;
+    margin-left: 80px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.post_content{
+    padding: 40px;
+}
+.post_content h5 {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+.post_content p{
+    color: rgb(114, 112, 112);
+}
+.side_decoration{
+    background-color: orange;
+    height: 200px;
+    width: 10px;
+    float: left;
+    border-radius: 15px 0px 0px 15px;
+}
 #announcements_and_treding{
     background-color: brown;
     border: 5px solid black;
