--- a/style.css
+++ b/style.css
@@ -13,20 +13,19 @@ body{
 }
 header{
     background-color: white;
-    border: 5px solid black;
-    height: 240px; 
+    height: 237px; 
     grid-area: 1 / 2 / 3 / 4;
     display: grid;
     grid-template-columns:  100px 2fr 1fr ;
     grid-template-rows: 2fr 1fr 1fr; 
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 aside {
     background-color: #3399FF;
     color: white;
     font-weight: bold;
     font-size: 1.3rem;
-    border: 5px solid black;
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
     grid-template-columns: 20px 200px 20px;
@@ -37,7 +36,6 @@ aside {
 
 #your_projects {
     background-color: gainsboro;
-    border: 5px solid black;
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
     grid-template-columns: 500px 1fr;
@@ -107,23 +105,24 @@ aside {
 }
 #announcements_and_treding{
     background-color: gainsboro;
-    border: 5px solid black;
     grid-area: 2 / 3 / 3 / 4;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 2fr 1fr 2fr;
+    grid-template-rows: 50px 2fr 1fr 200px;
 }
 #announcements_and_treding h4{
     font-weight: bold;
     font-size: 1.5rem;
     margin: 15px 0px 0px 0px;
 }
+
 .announcements{
     background-color: white;
     display: grid;
     grid-template-columns: 20px 1fr 20px;
     grid-template-rows: 120px 120px 160px;
     border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .announcements div{
     padding: 30px;
@@ -147,6 +146,36 @@ aside {
 }
 #third_announcement{
     grid-area: 3 / 2 / 4 / 3;
+}
+
+.trendings{
+    background-color: white;
+    border-radius: 15px;
+    display: grid;
+    grid-template-columns: 20px 1fr 20px;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    margin-bottom: 10px;
+    padding: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.trendings p{
+    color: rgb(114, 112, 112);
+}
+.first_trend{
+    grid-area: 1 / 2 / 2 / 3;
+}
+.second_trend{
+    grid-area: 2 / 2 / 3 / 3;
+}
+.third_trend{
+    grid-area: 3 / 2 / 4 / 3;
+}
+.fourth_trend{
+    grid-area: 4 / 2 / 5 / 3;
+}
+.cat_trend_img{
+    float: left;
+    margin: 5px 15px 0px 25px;
 }
 
 input{
